--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furit-Brust</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
     <!-- fonts link  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -83,7 +84,7 @@
                 <li class="bg-slate-500"><a>All Fruits</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+            <a class="btn btn-ghost normal-case text-xl"><img class="w-1/4		" src="./images/logo.png" alt="">Fruit Burst</a>
           </div>
           <div
             class="navbar-end input input-bordered rounded-full input-md w-full max-w-xs"
