--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <!-- cerasol style  -->
 
-      <div class="carousel ml-11 w-full">
+      <div class="carousel relative ml-11 w-full">
         <div id="slide1" class="carousel-item carousel-item1 relative w-full">
           <!-- <img src="./images/banner1.png" class="w-full" /> -->
           <div class="ml-96 mt-10">
@@ -286,6 +286,29 @@
             <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
+        </div>
+      </div>
+
+      <div class="card-div ml-80	absolute rounded-2xl	top-[36rem]	p-10	shadow-2xl text-center lg:flex lg:gap-16 	  lg:bg-white">
+        <div class="">
+          <img src="./images/fruit1.png" alt="">
+          <p class="py-5">Strawberry</p>
+        </div>
+        <div>
+          <img src="./images/fruit2.png" alt="">
+          <p class="py-5">Orange</p>
+        </div>
+        <div>
+          <img src="./images/fruit3.png" alt="">
+          <p class="py-5">Mango</p>
+        </div>
+        <div>
+          <img src="./images/fruit4.png" alt="">
+          <p class="py-5">Strawberry</p>
+        </div>
+        <div>
+          <img src="./images/fruit5.png" alt="">
+          <p class="py-5">Mango</p>
         </div>
       </div>
     </header>
